fixing spark 3.x tests to run on java 8